Source/WebKit2/WebProcess/Automation/WebAutomationSessionProxy.h
@@ -58,16 +58,16 @@ private:
     void didReceiveMessage(IPC::Connection&, IPC::MessageDecoder&);
 
     // Called by WebAutomationSessionProxy messages
-    void evaluateJavaScriptFunction(uint64_t frameID, const String& function, Vector<String> arguments, bool expectsImplicitCallbackArgument, int callbackTimeout, uint64_t callbackID);
-    void resolveChildFrameWithOrdinal(uint64_t frameID, uint32_t ordinal, uint64_t callbackID);
-    void resolveChildFrameWithNodeHandle(uint64_t frameID, const String& nodeHandle, uint64_t callbackID);
-    void resolveChildFrameWithName(uint64_t frameID, const String& name, uint64_t callbackID);
-    void resolveParentFrame(uint64_t frameID, uint64_t callbackID);
-    void focusFrame(uint64_t frameID);
-    void computeElementLayout(uint64_t frameID, String nodeHandle, bool scrollIntoViewIfNeeded, bool useViewportCoordinates, uint64_t callbackID);
+    void evaluateJavaScriptFunction(uint64_t pageID, uint64_t frameID, const String& function, Vector<String> arguments, bool expectsImplicitCallbackArgument, int callbackTimeout, uint64_t callbackID);
+    void resolveChildFrameWithOrdinal(uint64_t pageID, uint64_t frameID, uint32_t ordinal, uint64_t callbackID);
+    void resolveChildFrameWithNodeHandle(uint64_t pageID, uint64_t frameID, const String& nodeHandle, uint64_t callbackID);
+    void resolveChildFrameWithName(uint64_t pageID, uint64_t frameID, const String& name, uint64_t callbackID);
+    void resolveParentFrame(uint64_t pageID, uint64_t frameID, uint64_t callbackID);
+    void focusFrame(uint64_t pageID, uint64_t frameID);
+    void computeElementLayout(uint64_t pageID, uint64_t frameID, String nodeHandle, bool scrollIntoViewIfNeeded, bool useViewportCoordinates, uint64_t callbackID);
     void takeScreenshot(uint64_t pageID, uint64_t callbackID);
-    void getCookiesForFrame(uint64_t frameID, uint64_t callbackID);
-    void deleteCookie(uint64_t frameID, String cookieName, uint64_t callbackID);
+    void getCookiesForFrame(uint64_t pageID, uint64_t frameID, uint64_t callbackID);
+    void deleteCookie(uint64_t pageID, uint64_t frameID, String cookieName, uint64_t callbackID);
 
     String m_sessionIdentifier;
 
